--- a/cv.html
+++ b/cv.html
@@ -33,6 +33,7 @@
 							</ul>
 						</li>
 						<li class="current"><a href="cv.html">CV</a></li>
+						<li><a href="packages.html">Packages</a></li>
 					</ul>
 				</nav>
 
