--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
 												</header>
 
 				  <head>
-				    <title>Title of the document</title>
+				    <title>Dominique G Maucieri's Current CV</title>
 				  </head>
 				  <body>
 				    <iframe src="images/Dominique_G_Maucieri_CV.pdf#toolbar=0" width="100%" height="700px">
