--- a/publications.html
+++ b/publications.html
@@ -64,11 +64,16 @@
 												<p class =”apa-reference”>
 													Baum, J.K., D.C. Claar, K.L. Tietjen, J.M.T. Magel, <strong>D.G. Maucieri</strong>, K.M. Cobb, J.M. McDevitt-Irwin.
 													Transformation of coral communities subjected to an unprecedented heatwave is modulated by local disturbance. (<em>In Review</em>)
-													Preprint: <a href="https://www.biorxiv.org/content/10.1101/2022.05.10.491220v1">biorxiv.org/content/10.1101/2022.05.10.491220v1</a>
+													Preprint DOI: <a href="http://doi.org/10.1101/2022.05.10.491220v1">10.1101/2022.05.10.491220v1</a>
+												</p>
+												<p class =”apa-reference”>
+													<strong>Maucieri, D.G.</strong>. quadcleanR: An R Package for the Cleanup and Visualization of Quadrat Data. (<em>In Prep</em>).
+												
 												</p>
 											</section>
 
 											<section>
+
 												<h3>2021</h3>
 												<p class =”apa-reference”>
 													<strong>Maucieri, D.G.</strong>, and J.K. Baum. 2021. Impacts of heat stress on soft corals, an overlooked and highly
